@@ -1,3 +1,5 @@
 DIST Aptana_Studio_3_Setup_Linux_x86_3.0.4.zip 119725655 RMD160 c77d55e8e1e254248d10f11900b6b67a22297857 SHA1 45db165a2e2c1dd860d1d6f431d9ef350f75b82f SHA256 5ea5c6e8b21f25550e903a32e8f29fa5014e451f992d11f9b80332e757ffdc5f
+DIST Aptana_Studio_3_Setup_Linux_x86_64_3.0.4.zip 121841124 RMD160 14033a6426fc2f8f96ee2ba01915724290095880 SHA1 0be6d478b3a068e3ca4031b98529eb242cbe4c33 SHA256 bb45132cc34d76e6e53a527359c6569e256d9e26e22567f22036ae6ff5a70412
+EBUILD aptana-studio-bin-3.0.4-r1.ebuild 1564 RMD160 a0d4bca2550c6ff3cb1963941472885b485b9ddf SHA1 3794dc34efe4b5caf978a192f1d8c30ae9a1abfa SHA256 c1984bafb5400e1b22f6c36df584b8c0830a5a11a225ac31ef0a70fa651576fb
 EBUILD aptana-studio-bin-3.0.4.ebuild 1506 RMD160 d42b44e0504a046f1c1c7d9eb45fe19ce7196ba0 SHA1 a5768a80845f4d1c9cbe72c644bfb2dd484d6a84 SHA256 5e7bf33b46b80de8a52e95041b5ea2f2b4892d5771f6932c008023f8f626b255
-MISC ChangeLog 387 RMD160 b20c250d4ad1d0c589d1d9b77749fd26dd49f8d5 SHA1 40ccc4195e8012987923955535cfecce64b9f587 SHA256 1d0d0d5b0c0fce2809c1555104f1f5ca0bbf88acc87b2a4a48a0c0662b423f00
+MISC ChangeLog 577 RMD160 631051e2acfa3f52aa4a6546e9aea8e35dbe652b SHA1 450d037fa6241bb7fe2c8fd5de98fa1a00a89e64 SHA256 6ea1dda6d2a1d41cda7de232239db003c65517363e8daa9f75c4c3e9ad6e9893
