@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*aptana-studio-bin-3.0.4-r1 (21 Aug 2011)
+
+  21 Aug 2011; Denis Misiurca <infoman1985@gmail.com>
+  +aptana-studio-bin-3.0.4-r1.ebuild:
+  Added correct amd64 version and corrected icon path
+
 *aptana-studio-bin-3.0.4 (21 Aug 2011)
 
   21 Aug 2011; Denis Misiurca <infoman1985@gmail.com>
